--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+.swal-button {
+  padding: 7px 19px;
+  border-radius: 2px;
+  background-color: #FBB03B;
+  font-size: 12px;
+  border: 1px solid #FBB03B;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+}
+.swal-button:hover {
+  padding: 7px 19px;
+  border-radius: 2px;
+  background-color: #FBB03B;
+  font-size: 12px;
+  border: 1px solid #FBB03B;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+}
