--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.swal-button {
+  padding: 7px 19px;
+  border-radius: 2px;
+  background-color: #FBB03B;
+  font-size: 12px;
+  /* border: 1px solid #FBB03B; */
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+}
+
+.swal-button:hover {
+  padding: 7px 19px;
+  border-radius: 2px;
+  background-color: #FBB03B;
+  font-size: 12px;
+  /* border: 1px solid #FBB03B; */
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+}
